--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
                             <i class="fas fa-home"></i>
                             <span>Home</span>
                         </a>
-                        <a href="./terms.html" class="mario-menu-item">
+                        <a href="./terms" class="mario-menu-item">
                             <i class="fas fa-file-contract"></i>
                             <span>Terms</span>
                         </a>
-                        <a href="./community.html" class="mario-menu-item">
+                        <a href="./community" class="mario-menu-item">
                             <i class="fas fa-users"></i>
                             <span>Community</span>
                         </a>
-                        <a href="./robux.html" class="mario-menu-item">
+                        <a href="./robux" class="mario-menu-item">
                             <i class="fas fa-coins"></i>
                             <span>Robux</span>
                         </a>
