--- a/robux.html
+++ b/robux.html
@@ -32,15 +32,15 @@
                             <i class="fas fa-home"></i>
                             <span>Home</span>
                         </a>
-                        <a href="./terms.html" class="mario-menu-item">
+                        <a href="terms.html" class="mario-menu-item">
                             <i class="fas fa-file-contract"></i>
                             <span>Terms</span>
                         </a>
-                        <a href="./community.html" class="mario-menu-item">
+                        <a href="community.html" class="mario-menu-item">
                             <i class="fas fa-users"></i>
                             <span>Community</span>
                         </a>
-                        <a href="./robux.html" class="mario-menu-item active">
+                        <a href="robux.html" class="mario-menu-item active">
                             <i class="fas fa-coins"></i>
                             <span>Robux</span>
                         </a>
