--- a/home.html
+++ b/home.html
@@ -23,14 +23,14 @@
             <div class="container">
                 <div class="mario-header-content">
                     <!-- Logo bên trái -->
-                    <a href="home.html" class="mario-logo-container">
+                    <a href="./home.html" class="mario-logo-container">
                         <img src="./images/mario-character.png" alt="Mario Character" class="mario-character">
                         <span class="mario-logo-text">Mario Market</span>
                     </a>
                     
                     <!-- Menu điều hướng - căn giữa -->
                     <div class="mario-menu">
-                        <a href="home.html" class="mario-menu-item active">
+                        <a href="./home.html" class="mario-menu-item active">
                             <i class="fas fa-home"></i>
                             <span>Home</span>
                         </a>
