--- a/robux.html
+++ b/robux.html
@@ -21,26 +21,26 @@
             <div class="container">
                 <div class="mario-header-content">
                     <!-- Logo bên trái -->
-                    <a href="home.html" class="mario-logo-container">
+                    <a href="./index.html" class="mario-logo-container">
                         <img src="./images/mario-character.png" alt="Mario Character" class="mario-character">
                         <span class="mario-logo-text">Mario Market</span>
                     </a>
                     
                     <!-- Menu điều hướng - căn giữa -->
                     <div class="mario-menu">
-                        <a href="home.html" class="mario-menu-item">
+                        <a href="./index.html" class="mario-menu-item">
                             <i class="fas fa-home"></i>
                             <span>Home</span>
                         </a>
-                        <a href="terms.html" class="mario-menu-item">
+                        <a href="./terms.html" class="mario-menu-item">
                             <i class="fas fa-file-contract"></i>
                             <span>Terms</span>
                         </a>
-                        <a href="community.html" class="mario-menu-item">
+                        <a href="./community.html" class="mario-menu-item">
                             <i class="fas fa-users"></i>
                             <span>Community</span>
                         </a>
-                        <a href="robux.html" class="mario-menu-item active">
+                        <a href="./robux.html" class="mario-menu-item active">
                             <i class="fas fa-coins"></i>
                             <span>Robux</span>
                         </a>
